--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
-# Kerala IoT Challenge
-This repository is made to document the experiments I've done in the Kerala IoT challenge. 
-### About Kerala IoT Challenge
+Kerala IoT Challenge
+This repository is made to document the experiments I've done in the Kerala IoT challenge.
 
-__Foxlab Makerspace__ in association with __GTech - Group of Technology Companies in Kerala__ launched the prestigious program __“Kerala IoT Challenge 2021”__, embracing the vision of 5000 IoT-enabled students from Kerala, hosting on the µLearn platform.   
-__Kerala IoT Challenge__ is a program designed in 4 levels followed by a hackathon to identify and train quality industry leaders in the IoT domain, while any novice learner can start with level 1.
+About Kerala IoT Challenge
+Foxlab Makerspace in association with GTech - Group of Technology Companies in Kerala launched the prestigious program “Kerala IoT Challenge 2021”, embracing the vision of 5000 IoT-enabled students from Kerala, hosting on the µLearn platform.
+Kerala IoT Challenge is a program designed in 4 levels followed by a hackathon to identify and train quality industry leaders in the IoT domain, while any novice learner can start with level 1.
