--- a/readme
+++ b/readme
@@ -1,1 +1,7 @@
-\# Kerala IoT Challenge This repository is made to document the experiments I've done in the Kerala IoT challenge. ### About Kerala IoT Challenge \_\_Foxlab Makerspace\_\_ in association with \_\_GTech - Group of Technology Companies in Kerala\_\_ launched the prestigious program \_\_“Kerala IoT Challenge 2021”\_\_, embracing the vision of 5000 IoT-enabled students from Kerala, hosting on the µLearn platform. \_\_Kerala IoT Challenge\_\_ is a program designed in 4 levels followed by a hackathon to identify and train quality industry leaders in the IoT domain, while any novice learner can start with level 1.
+\# Kerala IoT Challenge 
+This repository is made to document the experiments I've done in the Kerala IoT challenge.
+### About Kerala IoT Challenge 
+\_\_Foxlab Makerspace\_\_ in association with \_\_GTech - Group of Technology Companies in Kerala\_\_ launched the prestigious program
+\_\_“Kerala IoT Challenge 2021”\_\_, embracing the vision of 5000 IoT-enabled students from Kerala, hosting on the µLearn platform. \_\_Kerala IoT Challenge\_\_ is
+a program designed in 4 levels followed by a hackathon to identify and train quality industry leaders in the IoT domain, while any novice learner can start 
+with level 1.
